[gd_scene load_steps=6 format=3 uid="uid://cn71txd25pfdg"]

[ext_resource type="Script" uid="uid://b2asd6i4j0xjv" path="res://Scripts/dialog_box.gd" id="1_1ki1k"]
[ext_resource type="FontFile" uid="uid://bskqnlkbql10a" path="res://Fonts/Nunito-Bold.ttf" id="1_hwgul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[sub_resource type="FontVariation" id="FontVariation_4c57u"]
base_font = ExtResource("1_hwgul")
variation_embolden = -0.5

[sub_resource type="FontVariation" id="FontVariation_efxa6"]
base_font = SubResource("FontVariation_4c57u")

[node name="DialogBox" type="PanelContainer"]
custom_minimum_size = Vector2(240, 100)
offset_right = 240.0
offset_bottom = 100.0
scale = Vector2(1e-05, 1e-05)
theme_override_styles/panel = SubResource("StyleBoxFlat_5vw27")
script = ExtResource("1_1ki1k")

[node name="BoxMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="DialogText" type="RichTextLabel" parent="BoxMargin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_4c57u")
theme_override_fonts/bold_font = SubResource("FontVariation_efxa6")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
fit_content = true
visible_characters = 0
visible_ratio = 0.0
